--- a/css/main.css
+++ b/css/main.css
@@ -95,11 +95,26 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-body,td,th {
-    font-family: Arial;
+p,a{
     font-size: 11px;
-    color: #000000;
+    line-height: 25px;
 }
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+
+.section-title{
+    font-weight: bold;
+    font-size:14px;
+}
+
+
 body {
     margin-left: 50px;
     margin-top: 0px;
@@ -110,72 +125,7 @@ body {
     border-bottom-style: none;
     border-left-style: none;
 }
-a:link {
-    color: #0000FF;
-    text-decoration: none;
-}
-a:visited {
-    text-decoration: none;
-    color: #990099;
-}
-a:hover {
-    text-decoration: underline;
-    color: #9900CC;
-}
-a:active {
-    text-decoration: none;
-    color: #000000;
-}
-h1,h2,h3,h4,h5,h6 {
-    font-family: Arial;
-}
-h1 {
-    font-size: 18px;
-}
-h2 {
-    font-size: 16px;
-}
-h3 {
-    font-size: 14px;
-}
-.style3 {
-    font-size: xx-large;
-    color: #000000;
-    font-weight: bold;
-}
-.top {
-    border-top-style: none;
-    border-right-style: solid;
-    border-bottom-style: solid;
-    border-left-style: none;
-}
-.style5 {font-size: 12px}
-.style7 {color: #000000}
-.style9 {font-size: 10px}
-.style11 {color: #000000; font-size: 10px; }
-a {
-    font-size: 11px;
-    color: #000000;
-    font-family: Arial;
-}
-.text {
-    border-right-style: none;
-    border-right-color: #666666;
-    line-height: 20px;
-    color: #999999;
-}
-.style14 {
-    font-size: 14px;
-    font-weight: bold;
-    color: #000000;
-}
-.style15 {
-    font-size: 14px;
-    font-weight: bold;
-}
-.style16 {font-size: 9px; color: #000000; font-weight: bold; }
-.style17 {color: #000000; font-size: 14px;}
-.style19 {color: #000000; font-size: 11px; }
+
 
 
 
