--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,17 @@ body {
     border-left-style: none;
 }
 
+.paragraph{
+    -webkit-box-sizing: border-box;
+   box-sizing: border-box;
+   min-width: 480px;
+   padding: 20px;
+   width: 100%;
+}
 
+.sidebar{
+
+}
 
 
 /* ==========================================================================
