--- a/css/main.css
+++ b/css/main.css
@@ -126,15 +126,15 @@ body {
     border-left-style: none;
 }
 
-.paragraph{
+.body{
     -webkit-box-sizing: border-box;
    box-sizing: border-box;
-   min-width: 375px;
-   padding: 20px;
+   min-width: 480px;
    width: 100%;
 }
 
-.sidebar{
+.paragraph{
+   padding: 10px;
 
 }
 
