--- a/css/main.css
+++ b/css/main.css
@@ -125,13 +125,13 @@ body {
     border-bottom-style: none;
     border-left-style: none;
 }
-
+/*
 .body{
     -webkit-box-sizing: border-box;
    box-sizing: border-box;
    min-width: 480px;
    width: 100%;
-}
+}*/
 
 .paragraph{
    padding: 10px;
